# paritok-4b-v1

./: .gitignore  CITATION.cff  README.md  deploy.sh  deploy_sft_4b.sh  pyproject.toml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data_pipeline/: .env.example  README.md
data_pipeline/compress/: compress_pool_file_read.py  compress_pool_other.py
data_pipeline/extract/: extract_file_read_pool.py  extract_other_kinds_pool.py
data_pipeline/prompts/: system_prompt.txt  system_prompt_other.txt  system_prompt_other_qwen3.txt  system_prompt_qwen3.txt
data_pipeline/quality/: bench_per_seg.py  cache_gt_samples.py  gt_sample_index.json  lint_compressed.py  merge_replacement.py
data_pipeline/review_app/: index.html  main.js  package.json  preload.js  renderer.js
data_pipeline/scripts/: 01_download.py  01b_explore.py  02_parse_trajectories.py  03_filter_segment.py  04_label.py  05_finalize.py  06_distill.py  bench_run.py  bench_score.py  check_kinds.py  diagnose.py  inspect_abstractive.py  inspect_failure_modes.py  inspect_mustkeep_recall.py  inspect_per_segment.py  inspect_rejects.py
examples/inference/: basic.py
paritok/: __init__.py  cli.py  config.py  storage.py  token_counter.py  tool_topk.py
paritok/middleware/: __init__.py  wrapper.py
paritok/pipelines/: __init__.py  compress.py  tool_discovery.py  virtual.py
paritok/proxy/: __init__.py  codex_setup.py  pricing.py  server.py
paritok/proxy/adapters/: __init__.py  anthropic.py  openai.py  responses.py
paritok/strategies/: __init__.py  chunking.py  gpu_server.py  local_model.py  prompts.py  tagger.py
src/: mustkeep.py  schema.py  tokenizer_utils.py
tests/: test_codex_output_kind.py  test_gpu_server_check.py  test_model_input.py  test_openai_upstream.py  test_responses_function_call_output.py  test_responses_nonfunction_tools.py  test_seg_unwrap.py  test_stream_remote_protocol_error.py  test_token_counter_models.py
training/: requirements_training.txt  train_sft_instruct.py
training/configs/: sft_config_qwen3_4b.yaml
training/models/checkpoint-2000/: adapter_config.json
